[package]
name = "quoty"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Simple CLI program that returns a programming quote"
homepage = "https://kryptic.sh"
repository = "https://github.com/mxaddict/quoty"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
